--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
   <title>Airbnb</title>
   <base href="/">
-
+  <script src="node_modules/chart.js/src/chart.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
